add subscribe-plan schedule

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,51 @@
 AWS_NODEJS_CONNECTION_REUSE_ENABLED=1
-STRIPE_SECRET_API_KEY="sk_test_XXXX"
-STRIPE_PUBLISHABLE_KEY="pk_test_XXXX"
-API_VERSION="2020-08-27"
+STRIPE_SECRET_API_KEY=""
+STRIPE_PUBLISHABLE_KEY=""
+STRIPE_SECRET_API_KEY_LIVE=""
+STRIPE_PUBLISHABLE_KEY_LIVE="6"
+API_VERSION=""
+PRICEID_CONNECT_BANK_ACCOUNT_METERED=""
+PRICEID_GST_REGISTRATION_METERED=""
+PRICEID_GST_QUARTERLY_SUBMISSION_METERED=""
+PRICEID_TAX_FILLING_METERED=""
+PRICEID_XBRL_FINANCIAL_METERED=""
+PRICEID_BANK_ACCOUNT_GIRO_METERED=""
+PRICEID_APPOINTMENT_OF_DIRECTOR_METERED=""
+PRICEID_RESIGNATION_OF_DIRECTOR_METERED=""
+PRICEID_CHANGE_OF_DIRECTOR_PARTICULAR_METERED=""
+PRICEID_CHANGE_OF_COMPANY_NAME_METERED=""
+PRICEID_CHANGE_OF_REGISTERED_BUSINESS_ADDRESS_METERED=""
+PRICEID_CHANGE_OF_FINANCIAL_YEAR_END_METERED=""
+PRICEID_CHANGE_OF_PRINCIPAL_BUSINESS_ACTIVITIES_METERED=""
+PRICEID_TRANSFER_ALLOTMENT_OF_SHARES_METERED=""
+PRICEID_STRIKEOFF_OF_COMPANY_METERED=""
+PRICEID_REVIEW_OF_DATA_PROTECTION_POLICIES_METERED=""
+PRICEID_DATA_BREACH_INCIDENT_SIMULATION_METERED=""
+PRICEID_REFRESHER_TRAINING_METERED=""
+PRICEID_CPF_ACCOUNT_SETUP_METERED=""
+PRICEID_ANNUAL_IR8S_SUBMISSION_METERED=""
+PRICEID_IR21_TAX_CLEARANCE_METERED=""
+PRICEID_METERED_DRIVE_STORAGE=""
+PRODUCTID_COMPANY_SEAL=""
+PROMOTION_CODE_FIRST_PURCHASE_DISCOUNT=""
+THRESHOLD_PRODUCTIDS=""
+THRESHOLD_BANK_ACCOUNT_GIRO_METERED=1
+THRESHOLD_GST_REGISTRATION_METERED=1
+THRESHOLD_GST_ANNUAL_SUBMISSION=1
+THRESHOLD_GST_TAX_FILLING=1
+THRESHOLD_XBRL_FINANCIAL=1
+THRESHOLD_NEW_COMPANY_SEAL_METERED=1
+THRESHOLD_APPOINTMENT_OF_DIRECTOR=1
+THRESHOLD_RESIGNATION_OF_DIRECTOR=1
+THRESHOLD_CHANGE_OF_OFFICER=1
+THRESHOLD_CHANGE_OF_COMPANY_NAME=1
+THRESHOLD_CHANGE_OF_REGISTERED_BUSINESS=1
+THRESHOLD_CHANGE_OF_FINANCIAL_YEAR_END=1
+THRESHOLD_CHANGE_OF_PRINCIPAL_BUSINESS_ACTIVITIES=1
+THRESHOLD_SHARES_ISSUANCE=1
+THRESHOLD_STRIKEOFF_OF_COMPANY=1
+THRESHOLD_CPF_ACCOUNT_SETUP=1
+THRESHOLD_FORM_IRBA_ANNUAL_SUBMISSION=1
+THRESHOLD_FORM_IR21_SUBMISSION=1
+
+
