--- a/.env
+++ b/.env
@@ -19,15 +19,15 @@ PRICEID_CHANGE_OF_FINANCIAL_YEAR_END_METERED="price_1ITLpUL7tHIdzN9ngCcgqldA"
 PRICEID_CHANGE_OF_PRINCIPAL_BUSINESS_ACTIVITIES_METERED="price_1ITLqBL7tHIdzN9nzh7n4XTW"
 PRICEID_TRANSFER_ALLOTMENT_OF_SHARES_METERED="price_1ITLtKL7tHIdzN9nsBwmanoy"
 PRICEID_STRIKEOFF_OF_COMPANY_METERED="price_1ITMBkL7tHIdzN9ny9VlfkAX"
-PRICEID_APPOINTMENT_OF_DIRECTOR_FREE=""
-PRICEID_RESIGNATION_OF_DIRECTOR_FREE=""
-PRICEID_CHANGE_OF_DIRECTOR_PARTICULAR_FREE=""
-PRICEID_CHANGE_OF_COMPANY_NAME_FREE=""
-PRICEID_CHANGE_OF_REGISTERED_BUSINESS_ADDRESS_FREE=""
-PRICEID_CHANGE_OF_FINANCIAL_YEAR_END_FREE=""
-PRICEID_CHANGE_OF_PRINCIPAL_BUSINESS_ACTIVITIES_FREE=""
-PRICEID_TRANSFER_ALLOTMENT_OF_SHARES_FREE=""
-PRICEID_STRIKEOFF_OF_COMPANY_FREE=""
+PRICEID_APPOINTMENT_OF_DIRECTOR_FREE="price_1IY5zgL7tHIdzN9nxyOr47mQ"
+PRICEID_RESIGNATION_OF_DIRECTOR_FREE="price_1IY60fL7tHIdzN9nBQmClYEH"
+PRICEID_CHANGE_OF_DIRECTOR_PARTICULAR_FREE="price_1IY62DL7tHIdzN9nthBkMcyE"
+PRICEID_CHANGE_OF_COMPANY_NAME_FREE="price_1IY63CL7tHIdzN9njLwFqYdA"
+PRICEID_CHANGE_OF_REGISTERED_BUSINESS_ADDRESS_FREE="price_1IY6DsL7tHIdzN9no4Eek9wP"
+PRICEID_CHANGE_OF_FINANCIAL_YEAR_END_FREE="price_1IY6EFL7tHIdzN9nSmx7dqNK"
+PRICEID_CHANGE_OF_PRINCIPAL_BUSINESS_ACTIVITIES_FREE="price_1IY6EvL7tHIdzN9nGHZQCWQ3"
+PRICEID_TRANSFER_ALLOTMENT_OF_SHARES_FREE="price_1IY6FjL7tHIdzN9n402j4u3a"
+PRICEID_STRIKEOFF_OF_COMPANY_FREE="price_1IY6FrL7tHIdzN9nShuP6fZA"
 PRICEID_REVIEW_OF_DATA_PROTECTION_POLICIES_METERED="price_1ITPNWL7tHIdzN9nXgs9vMsR"
 PRICEID_DATA_BREACH_INCIDENT_SIMULATION_METERED="price_1ITPPjL7tHIdzN9nSu9zJA93"
 PRICEID_REFRESHER_TRAINING_METERED="price_1ITeXEL7tHIdzN9n7Lg1tRPC"
@@ -46,7 +46,7 @@ PRODUCT_ID_ESSENTIAL_HR_PACKAGE="prod_J5XQcZLiTSLoLc"
 PRODUCTID_COMPANY_SEAL="prod_J5WdEBEtviLYtc"
 PRODUCTID_COMPANY_INCORP="prod_J5VqOb5REFjHzQ"
 PRODUCT_ID_ESSENTIAL_CORPSEC="prod_J5WDvKJxGyusqw"
-PRODUCT_ID_COMPREHENSIVE=""
+PRODUCT_ID_COMPREHENSIVE_CORPSEC=""
 PROMOTION_COUPON_ID_DISCOUNT="2QhnQwO7"
 PROMOTION_CODE_FIRST_PURCHASE_DISCOUNT="MMB0QLCG"
 PROMOTION_ID_PURCHASE_DISCOUNT="promo_1IVTCQL7tHIdzN9nNaBLfjcg"
