add constant variable/env for comperehensive

--- a/.env
+++ b/.env
@@ -46,7 +46,7 @@ PRODUCT_ID_ESSENTIAL_HR_PACKAGE="prod_J5XQcZLiTSLoLc"
 PRODUCTID_COMPANY_SEAL="prod_J5WdEBEtviLYtc"
 PRODUCTID_COMPANY_INCORP="prod_J5VqOb5REFjHzQ"
 PRODUCT_ID_ESSENTIAL_CORPSEC="prod_J5WDvKJxGyusqw"
-PRODUCT_ID_COMPREHENSIVE_CORPSEC=""
+PRODUCT_ID_COMPREHENSIVE_CORPSEC="prod_J5XKGLDPiMDsQz"
 PROMOTION_COUPON_ID_DISCOUNT="2QhnQwO7"
 PROMOTION_CODE_FIRST_PURCHASE_DISCOUNT="MMB0QLCG"
 PROMOTION_ID_PURCHASE_DISCOUNT="promo_1IVTCQL7tHIdzN9nNaBLfjcg"
